force-app/main/default/objects/JobApplication__c/JobApplication__c.object-meta.xml
<CustomObject>
    <description>Used to track an application to a Job Posting.</description>
    <label>Job Application</label>
    <nameField>
        <label>Job Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>