force-app/main/default/objects/JobApplication__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Responsibilities, qualifications, benefits listed for the job</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>