force-app/main/default/objects/JobApplication__c/fields/Estimated_Federal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Federal_Tax__c</fullName>
    <description>Estimated Federal Tax</description>
    <label>Estimated Federal Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>