force-app/main/default/objects/JobApplication__c/fields/Estimated_Monthly_Pay__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Pay__c</fullName>
    <description>Estimated Monthly Pay</description>
    <label>Estimated Monthly Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>