force-app/main/default/objects/JobApplication__c/fields/Estimated_Yearly_Pay__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Yearly_Pay__c</fullName>
    <label>Estimated Yearly Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>