force-app/main/default/objects/JobApplication__c/fields/Federal_Income_Tax__c.field-meta.xml
<CustomField>
    <fullName>Federal_Income_Tax__c</fullName>
    <inlineHelpText>Federal Income tax</inlineHelpText>
    <label>Federal Income Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>