force-app/main/default/objects/JobApplication__c/fields/JobPostingRef__c.field-meta.xml
<CustomField>
    <fullName>JobPostingRef__c</fullName>
    <description>The job posting that we applying to.</description>
    <label>Job Posting</label>
    <referenceTo>JobPosting__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>JobApplications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>