force-app/main/default/objects/JobApplication__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <description>Site location of office (primarily for on-site/hybrid information)</description>
    <label>Office Location</label>
    <length>64</length>
    <type>Text</type>
</CustomField>