force-app/main/default/objects/JobApplication__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Job title for the application</description>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>