force-app/main/default/objects/JobApplication__c/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>Hyperlink to the job posting</description>
    <label>Url</label>
    <type>Url</type>
</CustomField>