force-app/main/default/objects/JobApplication__c/fields/Web_link__c.field-meta.xml
<CustomField>
    <fullName>Web_link__c</fullName>
    <description>Hyperlink to the job posting</description>
    <label>Web link</label>
    <type>Url</type>
</CustomField>