force-app/main/default/objects/JobApplication__c/recordTypes/Application.recordType-meta.xml
<RecordType>
    <fullName>Application</fullName>
    <active>true</active>
    <description>Needed for Path</description>
    <label>Application</label>
</RecordType>