force-app/main/default/objects/JobApplication__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>